se crean carpeta asset

--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
   <title>Sistema de mensajería</title>
 </head>
 <body>
+  <main>
+    <menu>
+      <ul>
+        <li></li>
+        <li></li>
+        <li></li>
+      </ul>
+    </menu>
+  </main>
   
 </body>
 </html>
